<resources>
    <string name="app_name">Smart Zakat Solution</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>









    <string name="login">LOGIN</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="user_registration">USER REGISTRATION</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="spinner_title">Applicant for</string>
    <string name="why_do_you_register">Why do you register?</string>
    <string name="apply_for_zakat">Apply for Zakat</string>
    <string name="donate_for_zakat">Donate for Zakat.</string>
    <string name="enter_your_pin">Enter Your PIN</string>
    <string name="don_t_remember_your_pin">Forget your PIN?</string>
    <string name="continue_without_login">Continue without login!</string>
    <string name="login_main">Login</string>
    <string name="registration">Registration</string>
    <string name="confirm_your_pin">Confirm your pin</string>
    <string name="registration_button">Registration</string>
    <string name="title_activity_otp">OTP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>