<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center"
    tools:context=".Login_User">


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"


            >

            <ImageView
                android:id="@+id/logoCover"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:padding="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logonew"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingTop="10dp"
                    android:text="@string/login"
                    android:textColor="@color/gold_regular"
                    android:textSize="35sp"
                    android:textStyle="bold"


                    app:autoSizeTextType="uniform" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_your_mobile_no"

                    android:textColor="@color/gold_dark"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_phone"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginUserMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/GoldDark" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_your_pin"
                    android:textColor="@color/gold_dark"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_lock"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:textColor="@color/GoldDark" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvDontRememberBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@string/don_t_remember_your_pin"
                    android:textColor="@color/gold_regular"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    tools:ignore="UnusedAttribute"
                    tools:targetApi="m" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"

                >


                <LinearLayout
                    android:id="@+id/layoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/gold_regular"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"


                    >

                    <ProgressBar
                        android:id="@+id/progresLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/white"
                        android:indeterminateTintMode="src_atop"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layoutReg"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/gold_regular"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"

                    >

                    <ProgressBar
                        android:id="@+id/progresReg"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/white"
                        android:indeterminateTintMode="src_atop"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Registration"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/tvAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"

                android:padding="10dp"
                android:text="Learn About Smart Zakat Solution App"
                android:textColor="@color/gold_regular"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:ignore="UnusedAttribute"
                tools:targetApi="m" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>